2014-03-31 George S. Williams <physicist@websterling.com>

	* Changed subprocess.check_output to subprocess.Popen in call to
	kpsewhich to allow it to work with Python 2.6

	* Added the CrossMark class contributed by Jeremi Piotrowski
	(<jeremi.piotrowski@gmail.com>)

	* Modified draw in Class FeynmanDiagram to allow adding padding
	around generated image

2014-03-26  Georg von Hippel <gmv22@cantab.net>

	* Fixed bug in getarrowpath reported by Alejandro Gomez Espinosa
	(<gomez@physics.rutgers.edu>).

2014-01-27  Georg von Hippel <gmv22@cantab.net>

	* Implemented bugfix contributed by George S. Williams
	(<physicist@websterling.com>); arrowheads are now drawn in a way
	that works both for older and newer PyX versions.

	* Now uses subprocess module to call kpsewhich for hepnicenames.sty
	instead of broken pykpathsea.

	* Phantom constructor now calls DecoratedLine constructor, ensuring
	that Phantom lines can actually be used to define fractional points
	to position stuff.

2013-10-03  Andy Buckley  <andy.buckley@cern.ch>

	* Tagging version 0.3.3.

	* Updating installation system to just use normal distutils, since
	setuptools is now defunct and unnecessary for interaction with
	PyPI.

2010-07-29  Georg von Hippel <gmv22@cantab.net>

	* Fixed bug reported by Jesse Dunietz; each diagram now gets its
	own canvas, which can be set in the constructor.

2010-01-22  Georg von Hippel <gmv22@cantab.net>

	* Added support for helicity-style (=>) arrows. This still needs work.

2010-01-21  Georg von Hippel <gmv22@cantab.net>

	* Added curved attribute to ParallelArrow class to allow
	parallel arrows to bend with the curve.

2010-01-20  Georg von Hippel <gmv22@cantab.net>

	* Added StarshapeMark class and constants for four-, five-,
	six- and eight-pointed stars as vertex markers.

	* Added Gravitino line class.

	* Added Phantom line class for invisible lines.

	* Added Ghost line class for dotted lines (like in YM ghost loops)
