@@ -1,3 +1,4 @@
 Andy Buckley <andy@insectnation.org>
 Georg von Hippel <gmv22@cantab.net>
+George S. Williams <pysicist@websterling.com>
 
